--- a/01-starting-project/src/components/Layout/Header.module.css
+++ b/01-starting-project/src/components/Layout/Header.module.css
@@ -4,8 +4,8 @@
   left: 0;
   width: 100%;
   height: 5rem;
-  background-color: #8a2b06;
-  color: white;
+  background-color: #75ff72;
+  color: #094d01;
   display: flex;
   justify-content: space-between;
   align-items: center;
